# discobot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  api.md  biome.json  eslint.config.js  go.mod  go.sum  index.html  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.claude/scripts/: validate-skills.sh
.discobot/services/: api  (+1 more)
.zed/: debug.json
agent/: .gitignore  Dockerfile  README.md  package.json  tsconfig.json
agent-api/: README.md  dev-agent  package.json
app/: globals.css  layout.tsx  page.tsx
components/: app-shell.tsx  error-boundary.tsx  monaco-editor-fix.tsx  resize-observer-fix.tsx  startup-status-bar.tsx
container-assets/: docs.txt
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  MACOS_ENTITLEMENTS.md  REACT_DEVTOOLS.md  STATUS_CONSTANTS.md
lib/: api-client.ts  api-config.ts  api-types.ts  mock-data.tsx  mock-db.tsx  tauri.ts  theme-constants.ts
patches/: ai@6.0.50.patch
proxy/: .golangci.yml  README.md  config-docker-cache.yaml  config.example.yaml
scripts/: build-server.mjs  build-vz-image.mjs  extract-vz-image.mjs  refresh-models-data.sh  release.mjs
server/: .air.toml  .env.auth.example  .env.example  .gitignore  .golangci.yml  Makefile  README.md  api.md  discobot-server.entitlements  go.mod  go.sum
src/: App.tsx  globals.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: setup.js
vm-assets/: fstab
(+571 files in other folders)
