[package]
name = "discobot"
version = "0.1.0"
description = "Discobot Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "discobot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.3.2"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-shell = "2.3.4"
rand = "0.9.2"
